test/1.4/errors/T_ETYPE.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// ERROR ETYPE
extern undefined_type_t undef_ret();
/// ERROR ETYPE
extern void undef_arg(undefined_type_t);
/// ERROR ETYPE
extern undefined_type undef_val;
/// ERROR ETYPE
typedef undefined_type_t undef_ret();
/// ERROR ETYPE
extern typedef void undef_arg(undefined_type_t);
/// ERROR ETYPE
extern typedef undefined_type undef_val;

template t {
    shared method m(
        // no error
        bool a,
        /// ERROR ETYPE
        undefined_type b)
        /// ERROR ETYPE
        -> (undefined_type);
    shared method n(
        // no error
        bool a,
        /// ERROR ETYPE
        undefined_type b)
        /// ERROR ETYPE
        -> (undefined_type) {
        assert false;
    }
    shared method o(
        // no error
        bool a,
        /// ERROR ETYPE
        undefined_type b)
        /// ERROR ETYPE
        -> (undefined_type) default {
        assert false;
    }
}

template u is t {
    shared method o(
        // no error
        bool a,
        /// ERROR ETYPE
        undefined_type b)
        /// ERROR ETYPE
        -> (undefined_type) {
        assert false;
    }
}
